--- a/src/app/components/products-list/products-list.component.html
+++ b/src/app/components/products-list/products-list.component.html
@@ -1,4 +1,3 @@
 <ul>
-  <li *ngFor="let product of productsList | async">{{ product.name }}</li>
+  <li *ngFor="let product of productsListList | async">{{ product.name }}</li>
 </ul>
-<h2>here I am</h2>
