Create the product request form

--- a/src/app/components/products-list/products-list.component.html
+++ b/src/app/components/products-list/products-list.component.html
@@ -21,3 +21,6 @@
     </tr>
   </tbody>
 </table>
+<app-product-request-form
+  *ngIf="requestedProductsFoundStatus | async as value"
+></app-product-request-form>
