Add showRequestedProducts() to the prodct request form

--- a/src/app/components/product-request-form/product-request-form.component.html
+++ b/src/app/components/product-request-form/product-request-form.component.html
@@ -32,4 +32,7 @@
     <strong>{{ this.addedProductName }}</strong> was added to the requested
     products list
   </p>
+  <button (click)="showRequestedProducts()">
+    Show me the requested products
+  </button>
 </div>
