--- a/src/app/components/products-list/products-list.component.scss
+++ b/src/app/components/products-list/products-list.component.scss
@@ -1,3 +1,19 @@
+ul {
+  padding: 0;
+  list-style-type: none;
+  border: 1px solid #000;
+  border-radius: 6px;
+  li {
+    padding: 5px 15px;
+    border-bottom: 1px solid #000;
+    text-align: left;
+
+    &:last-child {
+      border-bottom: none;
+    }
+  }
+}
+
 table {
   border-collapse: collapse;
 
